new folder created - styling

--- a/OneDrive/Documents/Resumes/portfolio.html
+++ b/OneDrive/Documents/Resumes/portfolio.html
@@ -2,8 +2,9 @@
 
 <head>
 
-    <title>$title</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <title>Angeline Gidaga Portfolio</title>
+    <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
+    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/>
 	
 </head>
 <body>
