--- a/OneDrive/Documents/Resumes/portfolio.html
+++ b/OneDrive/Documents/Resumes/portfolio.html
@@ -3,8 +3,8 @@
 <head>
 
     <title>Angeline Gidaga Portfolio</title>
-    <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
-    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/>
+  <!--- <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
+    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/> --> 
 	
 </head>
 <body>
