--- a/OneDrive/Documents/Resumes/portfolio.html
+++ b/OneDrive/Documents/Resumes/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 
+<html>
 <head>
 
     <title>Angeline Gidaga Portfolio</title>
@@ -12,8 +13,14 @@
     <p> testing</p>
     <p> test again</p>
 
-</body>
+
+
+    
 <footer>
 
     <p> Created by Angeline Gidaga 2024 </p>
 </footer>
+
+</body>
+
+</html>
