--- a/OneDrive/Documents/Resumes/portfolio.html
+++ b/OneDrive/Documents/Resumes/portfolio.html
@@ -4,8 +4,8 @@
 <head>
 
     <title>Angeline Gidaga Portfolio</title>
-  <!--- <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
-    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/> --> 
+    <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
+    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/> 
 	
 </head>
 <body>
@@ -15,9 +15,8 @@
 
 
 
-    
-<footer>
 
+<footer>
     <p> Created by Angeline Gidaga 2024 </p>
 </footer>
 
