--- a/Resumes/index.html
+++ b/Resumes/index.html
@@ -5,7 +5,7 @@
 
     <title>Angeline Gidaga Portfolio</title>
     <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
-    GitHub\portfolio\OneDrive\Documents\styling\styles.css'/> 
+    GitHub\portfolio\styling\styles.css'/> 
 	
 </head>
 <body>
