--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
 
     <title>Angeline Gidaga Portfolio</title>
-    <link rel='stylesheet' href='C:\Users\agida\OneDrive\Documents\
-    GitHub\portfolio\styling\styles.css'/> 
+    <link rel='stylesheet' href='styling\styles.css'/> 
 	
 </head>
 <body>
