creating real content

--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
 </head>
 <body>
 
-    <p> testing</p>
-    <p> test again</p>
-    <p> 20/03 testtt</p>
+   <table>
+    <th><h1> Angeline Gidaga</h1></th>
+     <tr>
+        <td><h2> Portfolio </h2></td>
+    </tr>
+        <tr>
+            <nav>About</nav>
+        </tr>
+   </table>
 
-    <span> no change in background</span>
-
-
-
-
-<footer>
-    <p> Created by Angeline Gidaga 2024 </p>
-</footer>
-
+   <table>
+    <tr>
+        <td></h3>Home</td></h3></td>
+    </tr>
+    <tr>
+        <footer>
+            <p> Created by Angeline Gidaga 2024 </p>
+        </footer>
+    </tr>
+   </table>
 </body>
 
 </html>
