--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
    <table>
-    <th><h1> Angeline Gidaga</h1></th>
+    <tr><th><h1> Angeline Gidaga</h1></th></tr>
      <tr>
         <td><h2> Portfolio </h2></td>
     </tr>
-        <tr>
-            <nav>About</nav>
-        </tr>
+    <tr>
+        <nav>About</nav>
+    </tr>
    </table>
 
    <table>
