--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
    <table>
-    <tr><th><h1> Angeline Gidaga</h1></th></tr>
+    <tr><th> Angeline Gidaga</th></tr>
      <tr>
         <td><h2> Portfolio </h2></td>
     </tr>
