--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 
    <table>
-    <tr><th> Angeline Gidaga</th></tr>
-     <tr>
-        <td><h2> Portfolio </h2></td>
-    </tr>
     <tr>
-        <nav>About</nav>
+        <header>
+            <h1>Angeline Gidaga</h1>
+            <br>
+            <h2> Portfolio </h2>
+            <br>
+            <nav>About</nav>
+        </header>
     </tr>
    </table>
 
