--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <tr>
         <header>
             <h1>Angeline Gidaga</h1>
-            <br>
             <h2> Portfolio </h2>
-            <br>
             <nav>About</nav>
         </header>
     </tr>
@@ -23,7 +21,7 @@
 
    <table>
     <tr>
-        <td></h3>Home</td></h3></td>
+        <td></h3>Home</h3></td>
     </tr>
     <tr>
         <footer>
