--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
 </head>
 <body>
 
-   <table>
-    <tr>
-        <header>
-            <h1>Angeline Gidaga</h1>
-            <h2> Portfolio </h2>
-            <nav>About</nav>
-        </header>
-    </tr>
+    <div>
+        <table>
+            <tr>
+                <header>
+                    <h1>Angeline Gidaga</h1>
+                    <h2> Portfolio </h2>
+                    <nav>About</nav>
+                </header>
+            </tr>
+        </table>
+    </div>
    
+    <div>
+        <table>
+            <tr>
+                <td></h3>Home</h3></td>
+            </tr>
+        </table>
+    </div>
 
-   
-    <tr>
-        <td></h3>Home</h3></td>
-    </tr>
-    <tr>
-        <footer>
-            <p> Created by Angeline Gidaga 2024 </p>
-        </footer>
-    </tr>
-   </table>
+    <div>
+        <tr>
+            <footer>
+                <p> Created by Angeline Gidaga 2024 </p>
+            </footer>
+        </tr>
+    </div>
+
 </body>
 
 </html>
