--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
 
     <div>
-        <table>
-            <tr>
-                <header>
-                    <h1>Angeline Gidaga</h1>
-                    <h2> Portfolio </h2>
-                    <nav>About</nav>
-                </header>
-            </tr>
-        </table>
+        <header>
+            <h1>Angeline Gidaga</h1>
+            <h2> Portfolio </h2>
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Resumes</li>
+                    <li>Work</li>
+                </ul>
+            </nav>
+        </header>
     </div>
    
     <div>
-        <table>
+        <table class="mainBody">
             <tr>
                 <td></h3>Home</h3></td>
             </tr>
