--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2> Portfolio </h2>
             <nav>
                 <ul>
-                    <li>About</li>
+                    <li><a href="pages\about.html"></a>About</li>
                     <li>Resumes</li>
                     <li>Work</li>
                 </ul>
