--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="pages\about.html"></a>About</li>
                     <li>Resumes</li>
                     <li>Work</li>
+                    <li><a href="pages\contact.html"></a> Contact</li>
                 </ul>
             </nav>
         </header>
