added in settings for php

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Angeline Gidaga Portfolio</title>
-    <link rel='stylesheet' href='styling\styles.css'/> 
+   <link rel='stylesheet' href='styling\styles.css'/>
 	
 </head>
 <body>
@@ -15,10 +15,10 @@
             <h2> Portfolio </h2>
             <nav>
                 <ul>
-                    <li><a href="pages\about.html"></a>About</li>
+                    <li><a href="pages\about.php">About</a></li>
                     <li>Resumes</li>
                     <li>Work</li>
-                    <li><a href="pages\contact.html"></a> Contact</li>
+                    <li><a href="pages\contact.html"> Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,6 +31,7 @@
             </tr>
         </table>
     </div>
+
 
     <div>
         <tr>
