changes in links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h2> Portfolio </h2>
             <nav>
                 <ul>
-                    <li><a href="pages\about.php">About</a></li>
-                    <li>Resumes</li>
-                    <li>Work</li>
+                    <li><a href="pages\about.html">About</a></li>
+                    <li><a href="pages\resume.html">Resume</a></li>
+                    <li><a href="pages\work.html">Work</a></li>
                     <li><a href="pages\contact.html"> Contact</a></li>
                 </ul>
             </nav>
@@ -27,11 +27,23 @@
     <div>
         <table class="mainBody">
             <tr>
-                <td></h3>Home</h3></td>
+                <td><h2>Home</h2></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><h3>A Little About Me</h3>
+
+
+                    <span>I am a student in my senior/4th year of College at Randolph-Macon College, Ashland, VA, USA. 
+                        I expect to graduate in May 2023 with a BA in Theatre and Computer Science. I did a study abroad 
+                        experience in Scotland at the University of Stirling and my plan is to go into a Computer Science 
+                        related career, starting out in any department because I love to learn the different areas of 
+                        Technology and I know various programming languages. I hope to end up in the Game Development 
+                        industry as a final career path. </span></td>
+                <td></td>
             </tr>
         </table>
     </div>
-
 
     <div>
         <tr>
