--- a/pages/about.html
+++ b/pages/about.html
@@ -7,4 +7,17 @@
     <link rel='stylesheet' href='styling\styles.css'/> 
 	
 </head>
+
+<body>
+
+    <h2>A Little About Me</h2>
+
+
+    <span>I am a student in my senior/4th year of College at Randolph-Macon College, Ashland, VA, USA. 
+        I expect to graduate in May 2023 with a BA in Theatre and Computer Science. I did a study abroad 
+        experience in Scotland at the University of Stirling and my plan is to go into a Computer Science 
+        related career, starting out in any department because I love to learn the different areas of 
+        Technology and I know various programming languages. I hope to end up in the Game Development 
+        industry as a final career path. </span>
+</body>
 </html>
