--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,8 +3,22 @@
 <html>
 <head>
 
-    <title>Angeline Gidaga Portfolio-Contact</title>
-    <link rel='stylesheet' href='styling\styles.css'/> 
+    <title>Angeline Gidaga Portfolio</title>
+    <link rel='stylesheet' href='..\styling\styles.css'/> 
+    
+    <!-- function where the codes are located and
+    changes background colour-->
+    <script src="..\functions.js"></script>
 	
 </head>
+
+<body onload="headerNav(), footer()">
+
+    <div id="headNav"></div>
+
+
+    <div id="foot"></div>
+
+    
+</body>
 </html>
