--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html> 
+
+<html>
+<head>
+
+    <title>Angeline Gidaga Portfolio</title>
+   <link rel='stylesheet' href='..\styling\styles.css'/>
+
+   <!-- function where the codes are located and
+    changes background colour-->
+    <script src="..\functions.js"></script>
+	
+</head>
+<body onload="headerNav(), footer()">
+
+    <div id="headNav"></div>
+
+   
+    <div id="foot"></div>
+</body>
+</html>
